--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
     <title>Pedro Morgado</title>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111354857-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-111354857-1');
+    </script>
+
+
     <!-- Bootstrap core CSS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
