--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 
           <div class="row each_exp">
               <div class="col-9">
-                <p class="exp_title"> Graduate Student Resercher</p>
-                <p class="exp_place"> University of California, San Diego</p>
+                <p class="exp_title"> University of California, San Diego</p>
+                <p class="exp_place"> Graduate Student Resercher</p>
               </div>
             <div class="col-3 exp_period">2014-Now</div>
           </div>
@@ -271,24 +271,24 @@
 
           <div class="row each_exp">
               <div class="col-9">
-                <p class="exp_title"> Research Scientist Intern</p>
-                <p class="exp_place"> Adobe Research, Seattle, USA</p>
+                <p class="exp_title"> Adobe Research, Seattle, USA</p>
+                <p class="exp_place"> Research Scientist Intern</p>
               </div>
             <div class="col-3 exp_period">Summer, 2017</div>
           </div>
 
           <div class="row each_exp">
               <div class="col-9">
-                <p class="exp_title"> Teaching Assistant, Digital Signal Processing II</p>
-                <p class="exp_place"> University of California, San Diego</p>
+                <p class="exp_title"> University of California, San Diego</p>
+                <p class="exp_place"> Teaching Assistant, Digital Signal Processing II</p>
               </div>
             <div class="col-3 exp_period">Spring, 2016</div>
           </div>
 
           <div class="row each_exp">
               <div class="col-9">
-                <p class="exp_title"> Graduate Reserch Assistent</p>
-                <p class="exp_place"> Institute for Systems and Robotics, Lisbon, Portugal</p>
+                <p class="exp_title"> Institute for Systems and Robotics, Lisbon, Portugal</p>
+                <p class="exp_place"> Graduate Reserch Assistent</p>
               </div>
             <div class="col-3 exp_period">2012-2014</div>
           </div>
