--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <a href="https://github.com/pedro-morgado" target="_blank">
               <i class="fab fa-github"></i>
             </a>
-            <a href="http://www.svcl.ucsd.edu/~pedro-morgado/files/cv.pdf" target="_blank">
+            <a href="http://www.svcl.ucsd.edu/~morgado/files/cv.pdf" target="_blank">
               <i class="ai ai-cv"></i>
             </a>
 
@@ -117,12 +117,12 @@
                 <p class="pub_venue">Advances in Neural Information Processing Systems (NIPS), Montreal, Canada, 2018.</p>
 
                 <p class="pub_supplemental"> 
-                  <a href="http://www.svcl.ucsd.edu/~pedro-morgado/spatialaudiogen/spatialaudiogen.pdf" target="_blank"> pdf </a> 
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/spatialaudiogen/spatialaudiogen.bib" target="_blank"> bibtex </a> 
+                  <a href="http://www.svcl.ucsd.edu/~morgado/spatialaudiogen/spatialaudiogen.pdf" target="_blank"> pdf </a> 
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/spatialaudiogen/spatialaudiogen.bib" target="_blank"> bibtex </a> 
                   · <a href="https://pedro-morgado.github.io/spatialaudiogen/" target="_blank"> project website </a>
                   · <a href="https://github.com/pedro-morgado/spatialaudiogen" target="_blank"> code </a> 
                   · <a href="https://arxiv.org/abs/1809.02587" target="_blank"> arxiv </a> 
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/spatialaudiogen/poster.pdf" target="_blank"> poster</a> 
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/spatialaudiogen/poster.pdf" target="_blank"> poster</a> 
                   </p>
               </div>
             </div> 
@@ -138,11 +138,11 @@
                 <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Honolulu, Hawaii, USA, 2017.</p>
 
                 <p class="pub_supplemental"> 
-                  <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/score/score-cvpr17.pdf" target="_blank"> pdf </a> 
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/score/score.bib" target="_blank"> bibtex </a>
+                  <a href="http://www.svcl.ucsd.edu/~morgado/publications/score/score-cvpr17.pdf" target="_blank"> pdf </a> 
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/publications/score/score.bib" target="_blank"> bibtex </a>
                   · <a href="https://github.com/pedro-morgado/score-zeroshot" target="_blank"> code </a> 
                   · <a href="https://arxiv.org/abs/1704.03039" target="_blank"> arxiv </a> 
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/score/score-poster.pdf" target="_blank"> poster </a> 
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/publications/score/score-poster.pdf" target="_blank"> poster </a> 
               </div>
             </div> 
           
@@ -154,8 +154,8 @@
                 <p class="pub_author"><b>Pedro Morgado</b> and Margarida Silveira </p>
                 <p class="pub_venue">Neurocomputing, Vol. 155, pp. 295-308, May, 2015</p>
                 <p class="pub_supplemental"> 
-                 <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/mnrmr-journal/paper.pdf" target="_blank"> pdf </a> 
-                · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/mnrmr-journal/citation.bib" target="_blank"> bibtex </a>
+                 <a href="http://www.svcl.ucsd.edu/~morgado/publications/mnrmr-journal/paper.pdf" target="_blank"> pdf </a> 
+                · <a href="http://www.svcl.ucsd.edu/~morgado/publications/mnrmr-journal/citation.bib" target="_blank"> bibtex </a>
               
                 <br><br>
                 <p class="pub_title">(Conference) Efficient Selection of Non-redundant Features for the Diagnosis of Alzheimer's Disease</p>
@@ -163,8 +163,8 @@
                 <p class="pub_venue">International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, United States, 2013</p>
 
                 <p class="pub_supplemental"> 
-                 <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/mnrmr/mnrmr.pdf" target="_blank"> pdf </a>
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/mnrmr/mnrmr.bib" target="_blank"> bibtex </a>
+                 <a href="http://www.svcl.ucsd.edu/~morgado/publications/mnrmr/mnrmr.pdf" target="_blank"> pdf </a>
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/publications/mnrmr/mnrmr.bib" target="_blank"> bibtex </a>
               </div>
             </div> 
 
@@ -179,8 +179,8 @@
                 <p class="pub_venue">Computers in Biology and Medicine, Vol. 58, pp. 101-109, March, 2015</p>
 
                 <p class="pub_supplemental"> 
-                 <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/longitudinal/paper.pdf" target="_blank"> pdf </a> 
-                · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/longitudinal/citation.bib" target="_blank"> bibtex </a>
+                 <a href="http://www.svcl.ucsd.edu/~morgado/publications/longitudinal/paper.pdf" target="_blank"> pdf </a> 
+                · <a href="http://www.svcl.ucsd.edu/~morgado/publications/longitudinal/citation.bib" target="_blank"> bibtex </a>
               </div>
             </div> 
 
@@ -192,17 +192,17 @@
                 <p class="pub_author"><b>Pedro Morgado</b>, Margarida Silveira and Jorge S Marques</p> 
                 <p class="pub_venue">Computer Methods in Biomechanics and Biomedical Engineering: Imaging Visualization, Vol. 1, April, 2013</p>
                 <p class="pub_supplemental"> 
-                 <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/lbp-journal/paper.pdf" target="_blank"> pdf </a> 
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/lbp-journal/citation.bib" target="_blank"> bibtex </a>
+                 <a href="http://www.svcl.ucsd.edu/~morgado/publications/lbp-journal/paper.pdf" target="_blank"> pdf </a> 
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/publications/lbp-journal/citation.bib" target="_blank"> bibtex </a>
                 <br><br>
                 <p class="pub_title">(Conference) Extending Local Binary Patterns to 3D for the Diagnosis of Alzheimer's Disease</p>
                 <p class="pub_author"><b>Pedro Morgado</b>, Margarida Silveira and Jorge S Marques </p>
                 <p class="pub_venue">International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, United States, 2013</p>
 
                 <p class="pub_supplemental"> 
-                 <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/lbp/paper.pdf" target="_blank"> pdf </a> 
-                · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/lbp/citation.bib" target="_blank"> bibtex </a>
-                · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/lbp/poster.pdf" target="_blank"> poster </a> 
+                 <a href="http://www.svcl.ucsd.edu/~morgado/publications/lbp/paper.pdf" target="_blank"> pdf </a> 
+                · <a href="http://www.svcl.ucsd.edu/~morgado/publications/lbp/citation.bib" target="_blank"> bibtex </a>
+                · <a href="http://www.svcl.ucsd.edu/~morgado/publications/lbp/poster.pdf" target="_blank"> poster </a> 
               </div>
             </div>
 
@@ -215,9 +215,9 @@
                   <p class="pub_venue">IEEE International Workshop on Machine Learning for Signal Processing (MLSP) Southampton, UK, 2013</p>
 
                   <p class="pub_supplemental"> 
-                   <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/texton/texton.pdf" target="_blank"> pdf </a> 
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/texton/texton.bib" target="_blank"> bibtex </a>
-                  · <a href="http://www.svcl.ucsd.edu/~pedro-morgado/publications/texton/texton-poster.pdf" target="_blank"> poster </a> 
+                   <a href="http://www.svcl.ucsd.edu/~morgado/publications/texton/texton.pdf" target="_blank"> pdf </a> 
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/publications/texton/texton.bib" target="_blank"> bibtex </a>
+                  · <a href="http://www.svcl.ucsd.edu/~morgado/publications/texton/texton-poster.pdf" target="_blank"> poster </a> 
                 </div>
               </div> 
         </div>
