--- a/index.html
+++ b/index.html
@@ -130,21 +130,54 @@
           <h1 class="col-12 px-0">Publications</h3>
           <p class="lead pb-3">Find my publication profile at <a href="https://scholar.google.pt/citations?user=_ntLSQ4AAAAJ&hl=en" target="_blank">Google Scholar</a>.</p>
           <div class="row each_pub">
+            <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto"><img class="img-fluid" src="https://pedro-morgado.github.io/nettailor/figs/teaser_row.png"></div>
+            <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
+              <p class="pub_title">NetTailor: Tuning the Architecture, Not Just the Weights</p>
+              <p class="pub_author"><b>Pedro Morgado</b> and Nuno Vasconcelos</p>
+              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, California, USA, 2019.</p>
+              <p class="pub_supplemental"> 
+                <a class="button button-website" href="https://pedro-morgado.github.io/nettailor/" target="_blank"> website </a>
+                <a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.pdf" target="_blank"> pdf </a> 
+                <a class="button button-bibtex" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.bib" target="_blank"> bibtex </a> 
+                <a class="button button-code" href="https://github.com/pedro-morgado/nettailor" target="_blank"> code </a> 
+                <!-- <a class="button button-arxiv" href="https://arxiv.org/abs/1809.02587" target="_blank"> arxiv </a>  -->
+                <a class="button button-suppl" href="http://www.svcl.ucsd.edu/~morgado/nettailor/poster.pdf" target="_blank"> poster </a> 
+                </p>
+            </div>
+          </div>
+
+          <div class="row each_pub">
+            <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto"><img class="img-fluid" src="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/main_fig.JPG"></div>
+            <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
+              <p class="pub_title">PIEs: Pose Invariant Embeddings</p>
+              <p class="pub_author">Chih-Hui Ho, <b>Pedro Morgado</b>, Amir Persekian and Nuno Vasconcelos</p>
+              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, California, USA, 2019.</p>
+              <p class="pub_supplemental"> 
+                <a class="button button-website" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE.html" target="_blank"> website </a>
+                <a class="button button-pdf" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/main.pdf" target="_blank"> pdf </a> 
+                <!-- <a class="button button-code" href="https://github.com/pedro-morgado/nettailor" target="_blank"> code </a>  -->
+                <!-- <a class="button button-arxiv" href="https://arxiv.org/abs/1809.02587" target="_blank"> arxiv </a>  -->
+                <a class="button button-suppl" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/supp.pdf" target="_blank"> suppl </a> 
+                </p>
+            </div>
+          </div>
+
+          <div class="row each_pub">
             <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto"><img class="img-fluid" src="img/publication/selfSupervised.png"></div>
             <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
               <p class="pub_title">Self-Supervised Generation of Spatial Audio for 360° Video</p>
               <p class="pub_author"><b>Pedro Morgado</b>, Nuno Vasconcelos, Timothy Langlois and Oliver Wang</p>
               <p class="pub_venue">Advances in Neural Information Processing Systems (NIPS), Montreal, Canada, 2018.</p>
               <p class="pub_supplemental"> 
+                <a class="button button-website" href="https://pedro-morgado.github.io/spatialaudiogen/" target="_blank"> website </a>
                 <a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/spatialaudiogen/spatialaudiogen.pdf" target="_blank"> pdf </a> 
                 <a class="button button-bibtex" href="http://www.svcl.ucsd.edu/~morgado/spatialaudiogen/spatialaudiogen.bib" target="_blank"> bibtex </a> 
-                <a class="button button-website" href="https://pedro-morgado.github.io/spatialaudiogen/" target="_blank"> website </a>
                 <a class="button button-code" href="https://github.com/pedro-morgado/spatialaudiogen" target="_blank"> code </a> 
                 <a class="button button-arxiv" href="https://arxiv.org/abs/1809.02587" target="_blank"> arxiv </a> 
                 <a class="button button-suppl" href="http://www.svcl.ucsd.edu/~morgado/spatialaudiogen/poster.pdf" target="_blank"> poster</a> 
                 </p>
             </div>
-          </div> 
+          </div>
         
           <div class="row each_pub">
             <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto"><img class="img-fluid" src="img/publication/semanticallyConsistent.png"></div>
