--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
               <p class="pub_title">NetTailor: Tuning the Architecture, Not Just the Weights</p>
               <p class="pub_author"><b>Pedro Morgado</b> and Nuno Vasconcelos</p>
-              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, California, USA, 2019.</p>
+              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, 2019.</p>
               <p class="pub_supplemental"> 
                 <a class="button button-website" href="https://pedro-morgado.github.io/nettailor/" target="_blank"> website </a>
                 <a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.pdf" target="_blank"> pdf </a> 
@@ -151,7 +151,7 @@
             <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
               <p class="pub_title">PIEs: Pose Invariant Embeddings</p>
               <p class="pub_author">Chih-Hui Ho, <b>Pedro Morgado</b>, Amir Persekian and Nuno Vasconcelos</p>
-              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, California, USA, 2019.</p>
+              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, 2019.</p>
               <p class="pub_supplemental"> 
                 <a class="button button-website" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE.html" target="_blank"> website </a>
                 <a class="button button-pdf" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/main.pdf" target="_blank"> pdf </a> 
@@ -184,7 +184,7 @@
             <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
               <p class="pub_title">Semantically Consistent Regularization for Zero-Shot Recognition</p>
               <p class="pub_author"><b>Pedro Morgado</b> and Nuno Vasconcelos</p>
-              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Honolulu, Hawaii, USA, 2017.</p>
+              <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Honolulu, Hawaii, 2017.</p>
               <p class="pub_supplemental"> 
                 <a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/publications/score/score-cvpr17.pdf" target="_blank"> pdf </a> 
                 <a class="button button-bibtex" href="http://www.svcl.ucsd.edu/~morgado/publications/score/score.bib" target="_blank"> bibtex </a>
@@ -211,7 +211,7 @@
               <br>
               <p class="pub_title">(Conference) Efficient Selection of Non-redundant Features for the Diagnosis of Alzheimer's Disease</p>
               <p class="pub_author"><b>Pedro Morgado</b>, Margarida Silveira and Jorge S Marques </p>
-              <p class="pub_venue">International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, United States, 2013</p>
+              <p class="pub_venue">International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, 2013</p>
               <p class="pub_supplemental"> 
                 <a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/publications/mnrmr/mnrmr.pdf" target="_blank"> pdf </a>
                 <a class="button button-bibtex" href="http://www.svcl.ucsd.edu/~morgado/publications/mnrmr/mnrmr.bib" target="_blank"> bibtex </a>
@@ -250,7 +250,7 @@
               <br><br>
               <p class="pub_title">(Conference) Extending Local Binary Patterns to 3D for the Diagnosis of Alzheimer's Disease</p>
               <p class="pub_author"><b>Pedro Morgado</b>, Margarida Silveira and Jorge S Marques </p>
-              <p class="pub_venue">International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, United States, 2013</p>
+              <p class="pub_venue">International Symposium on Biomedical Imaging (ISBI), San Francisco, CA, 2013</p>
               <p class="pub_supplemental"> 
                 <a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/publications/lbp/paper.pdf" target="_blank"> pdf </a> 
                 <a class="button button-bibtex" href="http://www.svcl.ucsd.edu/~morgado/publications/lbp/citation.bib" target="_blank"> bibtex </a>
