--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.pdf" target="_blank"> pdf </a> 
                 <a class="button button-bibtex" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.bib" target="_blank"> bibtex </a> 
                 <a class="button button-code" href="https://github.com/pedro-morgado/nettailor" target="_blank"> code </a> 
-                <!-- <a class="button button-arxiv" href="https://arxiv.org/abs/1809.02587" target="_blank"> arxiv </a>  -->
+                <a class="button button-arxiv" href="https://arxiv.org/abs/1907.00274" target="_blank"> arxiv </a> 
                 <a class="button button-suppl" href="http://www.svcl.ucsd.edu/~morgado/nettailor/poster.pdf" target="_blank"> poster </a> 
                 </p>
             </div>
