--- a/index.html
+++ b/index.html
@@ -323,6 +323,13 @@
               <div class="col-lg-3 col-sm-12 exp_period">2015-Now</div>
             </div>
 
+            <div class="row each_exp">
+              <div class="col-lg-9 col-sm-12">
+                <p class="exp_title"> Facebook AI Research (FAIR), New York, USA</p>
+                <p class="exp_place"> Research Intern</p>
+              </div>
+              <div class="col-lg-3 col-sm-12 exp_period">Summer, 2019</div>
+            </div>
 
             <div class="row each_exp">
               <div class="col-lg-9 col-sm-12">
