--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+              <a class="nav-link js-scroll-trigger" href="#resume">Vitae</a>
             </li>
           </ul>
         </div>
@@ -115,7 +115,7 @@
             As such, I've previously worked and maintain an active interest in areas such as multi-task network design, life-long learning, zero-shot, and low-shot learning, multimodal joint embeddings for visual, audio and text embeddings.
           </p>
           <p class="lead">  
-            Before starting my Ph.D. studies, I worked with Prof. Margarida Silveira in the automatic diagnosis of Alzheimer's disease, and it's onset stages from multiple brain imaging modalities such as MRI and PET.
+            Before starting my Ph.D. studies, I worked with Prof. Margarida Silveira in the automatic diagnosis of Alzheimer's disease and its onset stages, from multiple brain imaging modalities such as MRI and PET.
           </p>
         </div>
       </section>
