--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-12 mx-auto pt-5">
           <!-- <h3 class="mb-4 px-0">About me</h3> -->
-          <p class="lead">I am a Ph.D. student in the
+          <p class="lead">I am a Ph.D. candidate in the
             Statistical Visual Computing Lab <a href="http://www.svcl.ucsd.edu" target="_blank">(SVCL)</a> with <a href="http://www.svcl.ucsd.edu/~nuno/" target="_blank">Prof. Nuno Vasconcelos </a> at the University of California, San Diego</a>. Before arriving to UC San Diego, I earned both B.Sc. and M.Sc. degrees from Instituto Superior Técnico, Universidade de Lisboa in 2010 and 2012, respectively.
           </p>
           <!-- <hr> -->
