--- a/index.html
+++ b/index.html
@@ -130,6 +130,19 @@
         <div class="row mx-auto">
           <h1 class="col-12 px-0">Publications</h3>
           <p class="lead pb-3">Find my publication profile at <a href="https://scholar.google.pt/citations?user=_ntLSQ4AAAAJ&hl=en" target="_blank">Google Scholar</a>.</p>
+
+          <div class="row each_pub">
+            <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto"><img class="img-fluid" src="img/publication/avid.png"></div>
+            <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
+              <p class="pub_title">Audio-Visual Instance Discrimination with Cross-Modal Agreement</p>
+              <p class="pub_author"><b>Pedro Morgado</b>, Nuno Vasconcelos, Ishan Misra</p>
+              <p class="pub_venue">Preprint</p>
+              <p class="pub_supplemental"> 
+                <a class="button button-arxiv" href="https://arxiv.org/abs/2004.12943" target="_blank"> arxiv </a> 
+                </p>
+            </div>
+          </div>
+
           <div class="row each_pub">
             <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto"><img class="img-fluid" src="https://pedro-morgado.github.io/nettailor/figs/teaser_row.png"></div>
             <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
