--- a/index.html
+++ b/index.html
@@ -144,6 +144,25 @@
           </div>
 
           <div class="row each_pub">
+            <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto">
+              <img class="img-fluid" src="thumbnails/realistic-taxonomic-prediction.png">
+            </div>
+            <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
+              <p class="pub_title">Solving Long-tailed Recognition with Deep Realistic Taxonomic Classifier</p>
+              <p class="pub_author">Tz-Ying Wu, <b>Pedro Morgado</b>, Pei Wang, Chih-Hui Ho, and Nuno Vasconcelos</p>
+              <p class="pub_venue">European Conference on Computer Vision (ECCV), <strike>Glasgow, UK</strike>, Virtual, 2020.</p>
+              <p class="pub_supplemental">
+                <!--<a class="button button-website" href="https://pedro-morgado.github.io/nettailor/" target="_blank"> website </a>-->
+                <!--<a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.pdf" target="_blank"> pdf </a>-->
+                <a class="button button-bibtex" href="./bibtex/realistic-taxonomic-prediction.bib" target="_blank"> bibtex </a>
+                <!--<a class="button button-code" href="https://github.com/pedro-morgado/nettailor" target="_blank"> code </a>-->
+                <a class="button button-arxiv" href="https://arxiv.org/abs/2007.09898" target="_blank"> arxiv </a>
+                <!--<a class="button button-suppl" href="http://www.svcl.ucsd.edu/~morgado/nettailor/poster.pdf" target="_blank"> poster </a>-->
+                </p>
+            </div>
+          </div>
+
+          <div class="row each_pub">
             <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto"><img class="img-fluid" src="https://pedro-morgado.github.io/nettailor/figs/teaser_row.png"></div>
             <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
               <p class="pub_title">NetTailor: Tuning the Architecture, Not Just the Weights</p>
@@ -168,8 +187,9 @@
               <p class="pub_venue">IEEE Conf. on Computer Vision and Pattern Recognition (CVPR), Long Beach, CA, 2019.</p>
               <p class="pub_supplemental"> 
                 <a class="button button-website" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE.html" target="_blank"> website </a>
-                <a class="button button-pdf" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/main.pdf" target="_blank"> pdf </a> 
-                <!-- <a class="button button-code" href="https://github.com/pedro-morgado/nettailor" target="_blank"> code </a>  -->
+                <a class="button button-pdf" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/main.pdf" target="_blank"> pdf </a>
+                <a class="button button-bibtex" href="bibtex/poseinvariance.bib" target="_blank"> bibtex </a>
+                <a class="button button-code" href="https://github.com/chihhuiho/PIE_pose_invariant_embedding" target="_blank"> code </a>
                 <!-- <a class="button button-arxiv" href="https://arxiv.org/abs/1809.02587" target="_blank"> arxiv </a>  -->
                 <a class="button button-suppl" href="http://www.svcl.ucsd.edu/projects/OOWL/CVPR2019_PIE/supp.pdf" target="_blank"> suppl </a> 
                 </p>
