--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
           <div class="row each_pub">
             <div class="d-none d-md-block col-md-3 d-lg-block col-lg-3 text-center my-auto">
-              <img class="img-fluid" src="thumbnails/realistic-taxonomic-prediction.png">
+              <img class="img-fluid" src="thumbnails/realistic-taxonomic-prediction.jpg">
             </div>
             <div class="col-lg-9 col-md-9 col-sm-12 my-auto">
               <p class="pub_title">Solving Long-tailed Recognition with Deep Realistic Taxonomic Classifier</p>
