--- a/index.html
+++ b/index.html
@@ -156,12 +156,11 @@
               <p class="pub_author"><b>Pedro Morgado</b>, Yunsheng Li, Jose Costa Pereira, Mohammad Saberian, Nuno Vasconcelos</p>
               <p class="pub_venue">International Journal of Computer Vision (IJCV), 2020.</p>
               <p class="pub_supplemental">
-              <p class="button button-arxiv"> Preprint coming soon.</p>
+                <a class="button button-arxiv" href="http://arxiv.org/abs/2007.13912" target="_blank"> arxiv </a>
                 <!--<a class="button button-website" href="https://pedro-morgado.github.io/nettailor/" target="_blank"> website </a>-->
                 <!--<a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.pdf" target="_blank"> pdf </a>-->
-                <!--<a class="button button-bibtex" href="./bibtex/realistic-taxonomic-prediction.bib" target="_blank"> bibtex </a>-->
+                <a class="button button-bibtex" href="./bibtex/hashing.bib" target="_blank"> bibtex </a>
                 <!--<a class="button button-code" href="https://github.com/pedro-morgado/nettailor" target="_blank"> code </a>-->
-                <!--<a class="button button-arxiv" href="https://arxiv.org/abs/2007.09898" target="_blank"> arxiv </a>-->
                 <!--<a class="button button-suppl" href="http://www.svcl.ucsd.edu/~morgado/nettailor/poster.pdf" target="_blank"> poster </a>-->
               </p>
             </div>
@@ -178,9 +177,9 @@
               <p class="pub_supplemental">
                 <!--<a class="button button-website" href="https://pedro-morgado.github.io/nettailor/" target="_blank"> website </a>-->
                 <!--<a class="button button-pdf" href="http://www.svcl.ucsd.edu/~morgado/nettailor/nettailor.pdf" target="_blank"> pdf </a>-->
+                <a class="button button-arxiv" href="https://arxiv.org/abs/2007.09898" target="_blank"> arxiv </a>
                 <a class="button button-bibtex" href="./bibtex/realistic-taxonomic-prediction.bib" target="_blank"> bibtex </a>
                 <!--<a class="button button-code" href="https://github.com/pedro-morgado/nettailor" target="_blank"> code </a>-->
-                <a class="button button-arxiv" href="https://arxiv.org/abs/2007.09898" target="_blank"> arxiv </a>
                 <!--<a class="button button-suppl" href="http://www.svcl.ucsd.edu/~morgado/nettailor/poster.pdf" target="_blank"> poster </a>-->
                 </p>
             </div>
